Build hash for PerformanceMeasureEntry trace event with start/end times

Bug: 912363
Change-Id: I33dfc873765de17ca6f30db850093337f89da5bd
Reviewed-on: https://chromium-review.googlesource.com/c/1359865
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Nicolás Peña Moreno <npm@chromium.org>
Reviewed-by: Alexei Filippov <alph@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614575}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 3e4f35ef10df237ec8c34460552a6366058b763b