front_end/performance_test_runner/TimelineTestRunner.js
@@ -82,8 +82,8 @@ PerformanceTestRunner.tracingModel = function() {
 };
 
 PerformanceTestRunner.invokeWithTracing = function(functionName, callback, additionalCategories, enableJSSampling) {
-  let categories =
-      '-*,disabled-by-default-devtools.timeline*,devtools.timeline,' + SDK.TracingModel.TopLevelEventCategory;
+  let categories = '-*,disabled-by-default-devtools.timeline*,devtools.timeline,blink.user_timing,' +
+      SDK.TracingModel.TopLevelEventCategory;
 
   if (additionalCategories)
     categories += ',' + additionalCategories;
